--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	
 	<link rel='stylesheet' id='eastjava-css'  href='themes/eastjava/style.css?ver=1.1.11' type='text/css' media='all' />
 <link rel='stylesheet' id='eastjava-mediaqueries-css'  href='themes/eastjava/styles/mediaqueries.css?ver=1.1.11' type='text/css' media='all' />
-<link rel='stylesheet' id='google-webfonts-nc-css'  href='http://fonts.googleapis.com/css?family=Lato%3A100%2C300%2C400&#038;ver=4.0' type='text/css' media='all' />
-<link rel='stylesheet' id='google-webfonts-mw-css'  href='http://fonts.googleapis.com/css?family=Montserrat%3A400&#038;ver=4.0' type='text/css' media='all' />
+<link rel='stylesheet' id='google-webfonts-nc-css'  href='https://fonts.googleapis.com/css?family=Lato%3A100%2C300%2C400&#038;ver=4.0' type='text/css' media='all' />
+<link rel='stylesheet' id='google-webfonts-mw-css'  href='https://fonts.googleapis.com/css?family=Montserrat%3A400&#038;ver=4.0' type='text/css' media='all' />
 <link rel='stylesheet' id='sccss_style-css'  href='css/custom.css' type='text/css' media='all' />
-<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js?ver=4.0'></script>
+<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js?ver=4.0'></script>
 <script type='text/javascript' src='themes/eastjava/js/modernizr.custom.71422.js?ver=4.0'></script>
 <script type='text/javascript' src='themes/eastjava/js/pushy.min.js?ver=4.0'></script>
 <script type='text/javascript' src='themes/eastjava/js/jquery.fitvids.js?ver=4.0'></script>
