add undergrad thesis

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 			
 			<div class="widget"><div class="menu-resume-container"><ul id="menu-resume" class="menu"><li id="menu-item-6" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6"><a href="/media/DavidMcWhorterResume.pdf">Resume</a></li>
 </ul></div></div>			
+			<div class="widget"><div class="menu-resume-container"><ul id="menu-thesis" class="menu"><li id="menu-item-6" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6"><a href="/media/DavidMcWhorterThesis05.pdf">Thesis</a></li>
+</ul></div></div>			
 			<div class="social">
 				
 				          
