open links in new tab

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 		
 		<div id="sidebar-inner">
 			
-			<div class="widget"><div class="menu-resume-container"><ul id="menu-resume" class="menu"><li id="menu-item-6" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6"><a href="/media/DavidMcWhorterResume.pdf">Resume</a></li>
+			<div class="widget"><div class="menu-resume-container"><ul id="menu-resume" class="menu"><li id="menu-item-6" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6"><a href="/media/DavidMcWhorterResume.pdf" target="_blank">Resume</a></li>
 </ul></div></div>			
 
-			<div class="widget"><div class="menu-resume-container"><ul id="menu-thesis" class="menu"><li id="menu-item-6" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6"><a href="/media/DavidMcWhorterThesis05.pdf">Thesis</a></li>
+			<div class="widget"><div class="menu-resume-container"><ul id="menu-thesis" class="menu"><li id="menu-item-6" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6"><a href="/media/DavidMcWhorterThesis05.pdf" target="_blank">Thesis</a></li>
 </ul></div></div>			
 
-			<div class="widget"><div class="menu-resume-container"><ul id="menu-geomesa" class="menu"><li id="menu-item-6" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6"><a href="https://github.com/locationtech/geomesa/commits?author=dmcwhorter">GeoMesa</a></li>
+			<div class="widget"><div class="menu-resume-container"><ul id="menu-geomesa" class="menu"><li id="menu-item-6" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6"><a href="https://github.com/locationtech/geomesa/commits?author=dmcwhorter" target="_blank">GeoMesa</a></li>
 </ul></div></div>			
 
 			<div class="social">
